--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.21",
     "invariant": "^2.2.4",
+    "js-yaml": "^3.13.1",
     "katex": "^0.10.2",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
@@ -88,11 +89,11 @@
     "@babel/plugin-transform-flow-strip-types": "^7.4.4",
     "@babel/preset-env": "7.4.5",
     "@babel/preset-react": "7.0.0",
-    "babel-preset-gatsby": "0.1.11",
     "autoprefixer": "9.5.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "24.8.0",
+    "babel-preset-gatsby": "0.1.11",
     "browserslist": "4.6.1",
     "concurrently": "4.1.0",
     "eslint": "5.16.0",
@@ -102,8 +103,8 @@
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-react": "7.13.0",
     "eslint-watch": "5.1.2",
-    "flow-typed": "^2.5.1",
     "flow-bin": "^0.98.1",
+    "flow-typed": "^2.5.1",
     "gh-pages": "2.0.1",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.8.0",
